updated github projects

--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,10 +1,10 @@
 {
   "data": [
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
+      "id": "",
       "name": "Developer Portfolio",
       "createdAt": "12-28-2021",
-      "url": "https://github.com/palamsaiteja333/Developer Portfolio",
+      "url": "https://github.com/palamsaiteja333/DeveloperPortfolio",
       "description": "This project contains the code of developer portfolio which is hosted using github.",
       "isFork": false,
       "languages": [
